# healthcare

./: .dockerignore  .env.example  .gitignore  Dockerfile  OKF.md  README.md  agenc-agents-conversation.md  agency-agents-info.md  agent-integration-strategy.md  demo.sh  docker-compose.yml  prd.md  provider-api-f04-request.schema.json  pyproject.toml  start.sh  status.sh  stop.sh  tasks.md
.github/workflows/: ci.yml
docs/adr/: 001-use-amazon-qldb-for-audit-ledger.md  002-use-temporal-for-subsidy-orchestration.md  003-attribute-proof-model-for-eligibility.md  004-safety-first-urgency-classification.md
docs/ai/: urgency-classifier-prompts.md  urgency-classifier-strategy.md
docs/architecture/: encounter-flow.mmd  f02-affordability-engine-spec.md  f03-subsidy-orchestrator-spec.md  f06-audit-ledger-spec.md
docs/design/: patient-cost-dashboard-ux.md
docs/phases/: phase-2-implementation-plan.md
docs/security/: patient-income-proof-protocol.md  retention-schedule.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  (+1 more)
schemas/: eligibility-proof-audit-event.schema.json  eligibility-proof.json  eligibility-proof.protected-attributes.plaintext.json  eligibility-proof.schema.json  openapi-3.1.yaml  provider-api-f04-request.proto
security/: security-compliance-auditor.md
tests/: test_affordability_engine.py  test_api_integration.py  test_audit_ledger.py  test_auth.py  test_claims.py  test_db_repository.py  test_e2e_integration.py  test_fhir.py  test_subsidy_orchestrator.py  test_temporal_client.py  test_urgency_classifier.py
(+61 files in other folders)
