[project]
name = "crisiscost-orchestrator"
version = "0.1.0"
description = "Crisis-Cost Orchestrator — HIPAA-compliant healthcare cost protection platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "asyncpg>=0.30.0",
    "temporalio>=1.8.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0,<5.0",
    "PyJWT>=2.8.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
ignore = [
    "UP042",  # StrEnum vs (str, Enum) — Pydantic uses str, Enum pattern
    "B008",   # FastAPI Query() in function args — standard FastAPI pattern
    "B904",   # raise-from in except blocks — HTTPException wrapping is intentional
]

[tool.ruff.lint.per-file-ignores]
"src/models/fhir/*" = ["N815"]  # FHIR R4 requires camelCase field names
"src/models/cds_hooks.py" = ["N815"]  # CDS Hooks spec requires camelCase field names

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
